@@ -17,6 +17,8 @@ examples/check_number_of_items_ok.pl
 examples/check_number_ok.pl
 examples/check_required_fail.pl
 examples/check_required_ok.pl
+examples/check_strings_fail.pl
+examples/check_strings_ok.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
@@ -45,6 +47,7 @@ t/Mo-utils/08-check_length.t
 t/Mo-utils/09-check_number.t
 t/Mo-utils/10-check_number_of_items.t
 t/Mo-utils/11-check_required.t
+t/Mo-utils/12-check_strings.t
 utils.pm
 xt/Mo-utils/01-pod_coverage.t
 xt/Mo-utils/02-pod.t
