@@ -13,6 +13,7 @@ SYNOPSIS
      check_number($self, $key);
      check_number_of_items($self, $list_method, $item_method, $object_name, $item_name);
      check_required($self, $key);
+     check_strings($self, $key, $strings_ar);
 
 DESCRIPTION
     Mo utilities for checking of data objects.
@@ -105,6 +106,16 @@ SUBROUTINES
 
     Returns undef.
 
+  "check_strings"
+     check_strings($self, $key, $strings_ar);
+
+    Check parameter if it is correct string from strings list.
+
+    Put error if strings definition is undef or not list of strings. Put
+    error if check isn't ok.
+
+    Returns undef.
+
 ERRORS
      check_array():
              Parameter '%s' must be a array.
@@ -141,6 +152,13 @@ ERRORS
 
      check_required():
              Parameter '%s' is required.
+
+     check_strings():
+             Parameter '%s' must have strings definition.
+             Parameter '%s' must have right string definition.
+             Parameter '%s' must be one of defined strings.
+                     String: %s
+                     Possible strings: %s
 
 EXAMPLE1
      use strict;
@@ -529,8 +547,45 @@ EXAMPLE18
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' is required.
 
+EXAMPLE19
+     use strict;
+     use warnings;
+
+     use Mo::utils qw(check_strings);
+
+     my $self = {
+             'key' => 'value',
+     };
+     check_strings($self, 'key', ['value', 'foo']);
+
+     # Print out.
+     print "ok\n";
+
+     # Output:
+     # ok
+
+EXAMPLE20
+     use strict;
+     use warnings;
+
+     use Error::Pure;
+     use Mo::utils qw(check_strings);
+
+     $Error::Pure::TYPE = 'Error';
+
+     my $self = {
+             'key' => 'bar',
+     };
+     check_strings($self, 'key', ['foo', 'value']);
+
+     # Print out.
+     print "ok\n";
+
+     # Output like:
+     # #Error [...utils.pm:?] Parameter 'key' must be one of defined strings.
+
 DEPENDENCIES
-    Exporter, Error::Pure, Readonly, Scalar::Util.
+    Exporter, Error::Pure, List::Utils, Readonly, Scalar::Util.
 
 SEE ALSO
     Mo  Micro Objects. Mo is less.
